--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canvas-sketch": "^0.7.6"
+    "canvas-sketch": "^0.7.6",
+    "p5": "^1.5.0"
   }
 }
