--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "canvas-sketch": "^0.7.6",
-    "p5": "^1.5.0"
+    "p5": "^1.5.0",
+    "tone": "^14.7.77"
   }
 }
